# calibre-auto-import

./: Cargo.toml  Dockerfile  LICENSE  README.md
ci/: vars.yaml
src/: cli.rs  file_discovery.rs  main.rs  marker.rs
